<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingStart="6dp"
    android:paddingTop="6dp"
    android:paddingEnd="6dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/profile_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/device_name_font_size"
        tools:text="@string/common_no_device" />

    <LinearLayout
        android:id="@+id/profile_info_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_battery"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_battery_10" />

        <TextView
            android:id="@+id/bat_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_battery"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_battery_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_not_available"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>